# C-WaitGroup

./: README.md
usage_example/: CMakeLists.txt  README.md  makeVirus.py  virus_file.txt
usage_example/include/: waitgroup.h
usage_example/src/: main.c  waitgroup.c
